k8s/30-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: app
spec:
  selector: { app: web }
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: app
spec:
  replicas: 1
  selector: { matchLabels: { app: web } }
  template:
    metadata:
      labels: { app: web }
    spec:
      containers:
        - name: web
          image: k8s-demo/web:1.0.0
          imagePullPolicy: IfNotPresent
          ports: [ { containerPort: 80 } ]
